--- a/style.css
+++ b/style.css
@@ -27,6 +27,58 @@ h1 {
     height: 200px;
     margin: 10px;
 }
+perspective: 1000px;
+}
+
+.card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+}
+
+.card.red { background-color: red; }
+.card.green { background-color: green; }
+.card.blue { background-color: blue; }
+.card.brown { background-color: brown; }
+.card.purple { background-color: purple; }
+.card.yellow { background-color: yellow; }
+
+.card-front, .card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    border: 1px solid #333;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 18px;
+    color: white;
+    padding: 20px;
+}
+
+.card-front {
+    background-color: white;
+    color: black;
+}
+
+.card-back {
+    background-color: #333;
+    color: white;
+    transform: rotateY(180deg);
+}
+
+.card.flipped .card-inner {
+    transform: rotateY(180deg);
+}
+
+.answer-button, .reset-button {
+    margin: 10px;
+    padding: 10px 20px;
 
 .card-front, .card-back {
     width: 100%;
@@ -52,12 +104,12 @@ h1 {
     transform: rotateY(180deg);
 }
 
-.red .card-front { background-color: red; }
-.green .card-front { background-color: green; }
-.blue .card-front { background-color: blue; }
-.brown .card-front { background-color: brown; }
-.purple .card-front { background-color: purple; }
-.yellow .card-front { background-color: yellow; color: black; }
+.card.red .card-front, .card.red .card-back { background-color: red; }
+.card.green .card-front, .card.green .card-back { background-color: green; }
+.card.blue .card-front, .card.blue .card-back { background-color: blue; }
+.card.brown .card-front, .card.brown .card-back { background-color: brown; }
+.card.purple .card-front, .card.purple .card-back { background-color: purple; }
+.card.yellow .card-front, .card.yellow .card-back { background-color: yellow; }
 
 .card.flip .card-front {
     transform: rotateY(180deg);
