--- a/style.css
+++ b/style.css
@@ -29,6 +29,14 @@ h1 {
     position: relative;
 }
 
+.card-inner {
+    width: 100%;
+    height: 100%;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    position: relative;
+}
+
 .card-front, .card-back {
     width: 100%;
     height: 100%;
@@ -41,7 +49,6 @@ h1 {
     justify-content: center;
     font-size: 18px;
     color: white;
-    transition: transform 0.6s;
     padding: 10px;
     box-sizing: border-box;
 }
@@ -61,12 +68,8 @@ h1 {
 .purple .card-front, .purple .card-back { background-color: purple; }
 .yellow .card-front, .yellow .card-back { background-color: yellow; color: black; }
 
-.card.flip .card-front {
+.card.flip .card-inner {
     transform: rotateY(180deg);
-}
-
-.card.flip .card-back {
-    transform: rotateY(0deg);
 }
 
 .answer-button, .reset-button {
