Update app.css couleur

--- a/src/app.css
+++ b/src/app.css
@@ -67,3 +67,9 @@ button:focus-visible {
 .INC {
   background-color: #f00;
 }
+.CAD {
+  background-color: orange;
+}
+.PPABE {
+  background-color: blue;
+}
