nom de catégorie sr-fdf ppabe-rtn+ css prv

--- a/src/app.css
+++ b/src/app.css
@@ -70,9 +70,12 @@ button:focus-visible {
 .CAD {
   background-color: orange;
 }
-.PPABE {
+.PPABE-RTN {
   background-color: blue;
 }
-.SR {
+.SR-FDF {
   background-color: blueviolet;
+}
+.PRV {
+  background-color: black;
 }
