--- a/src/app.css
+++ b/src/app.css
@@ -77,5 +77,5 @@ button:focus-visible {
   background-color: blue;
 }
 .SR-FDF {
-  background-color: blueviolet;
+  background-color: rgb(62, 3, 118);
 }
