--- a/src/app.css
+++ b/src/app.css
@@ -48,6 +48,10 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+a {
+  color: lightblue;
+}
+
 img {
   max-width: 90%;
 }
@@ -82,6 +86,9 @@ img {
   }
   button {
     background-color: #f9f9f9;
+  }
+  a {
+    color: #2e5967;
   }
   .PRV-COD {
     background-color: lightgray;
