--- a/src/app.css
+++ b/src/app.css
@@ -21,9 +21,7 @@ body {
   min-width: 320px;
   min-height: 100vh;
 }
-.regle{
-  margin: 10px;
-}
+
 
 #app {
   max-width: 1280px;
@@ -31,7 +29,6 @@ body {
   padding: 2rem;
   text-align: center;
 }
-
 button {
   border-radius: 8px;
   border: 1px solid transparent;
@@ -137,4 +134,12 @@ img {
   &.rolling {
     animation: rollDice 1s ease-in-out infinite;
   }
+}
+/* Style for the telecharge button */
+.telecharge{
+  margin: 10px;
+  display: block;
+  float: right;
+  vertical-align: top;
+  
 }
