--- a/src/app.css
+++ b/src/app.css
@@ -63,31 +63,29 @@ img {
 
 /* Couleurs des catégories */
 
-.SAP {
+.SAP .TOXICOLOGIE{
   background-color: #0f0;
   color: black;
 }
 
-.INC {
+.INC .DETECTION{
   background-color: #ff0000a1;
 }
-.CAD {
+.CAD .CHIMIE {
   background-color: orange;
   color: black;
 }
-.PRV-COD {
+.PRV-COD .PROCEDURE{
   background-color: yellow;
   color: black;
 }
-.PPABE-RTN {
+.PPABE-RTN .MATERIELS {
   background-color: blue;
 }
-.SR-FDF {
+.SR-FDF .EPI{
   background-color: rgb(62, 3, 118);
 }
-.CHIMIE {
-  background-color: orange;
-}
+
 @keyframes rollDice {
   0% {
     transform: rotate(0deg) scale(1);
